# pyanimate

./: .flake8  .gitignore  LICENSE  animate.py  animation.py  assert_checker.py  assign_dim_in_prepare.py  dev-requirements.txt  layout.py  lint.sh  main.py  point.py  pyproject.toml  renderer.py  requirements.txt  scene.py  style.py  test.sh
.github/workflows/: lint.yaml  test.yaml
examples/: animate.py  bitfield-diagram.py
src/pyanimate/: __init__.py  animation.py  layout.py  point.py  renderer.py  scene.py  shape.py  solver.py  style.py
tests/: __init__.py  conftest.py  test_fade.py  test_layout.py  test_object.py  test_renderer.py  test_scene.py  test_shape.py  test_solver.py  test_style.py
tests/typesafety/: shape.py
